--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-opencv-python==4.8.0.76
-numpy==1.24.3
-torch==2.1.0
-mediapipe==0.10.9
-pandas==2.0.3
-matplotlib==3.7.2
-seaborn==0.12.2
-scikit-learn==1.3.0
-gdown>=4.7.1
+opencv-python==4.11.0.86
+numpy==1.26.4
+torch==2.6.0
+mediapipe==0.10.21
+pandas==2.2.3
+matplotlib==3.10.1
+seaborn==0.13.2
+scikit-learn==1.6.1
+gdown==5.2.0
